--- a/src/views/articles/article.ejs
+++ b/src/views/articles/article.ejs
@@ -1,6 +1,6 @@
 <main class="container px-4 py-8 mx-auto w-2/3 sm:w-2/3 md:w-2/3 lg:w-2/3 xl:w-2/3">
     <!-- Category -->
-    <nav aria-label="Breadcrumb" class="flex text-gray-600">
+    <nav aria-label="Breadcrumb" class="flex text-blue-500 font-bold ml-6">
         <ol class="flex space-x-2">
             <li>
                 <a href="/" class="text-blue-600 hover:text-blue-800">Category</a>
@@ -45,12 +45,12 @@
 
         <!-- Tags Section -->
         <div class="mt-6">
-            <h3 class="text-xl font-semibold mb-4">Tags</h3>
-            <div class="flex flex-wrap gap-3">
-                <a href="#" class="bg-blue-200 text-blue-800 py-1 px-3 rounded-full text-sm hover:bg-blue-300 hover:text-blue-900 transition-colors duration-300">Technology</a>
-                <a href="#" class="bg-yellow-200 text-yellow-800 py-1 px-3 rounded-full text-sm hover:bg-yellow-300 hover:text-yellow-900 transition-colors duration-300">AI</a>
-                <a href="#" class="bg-green-200 text-green-800 py-1 px-3 rounded-full text-sm hover:bg-green-300 hover:text-green-900 transition-colors duration-300">Blockchain</a>
-                <a href="#" class="bg-red-200 text-red-800 py-1 px-3 rounded-full text-sm hover:bg-red-300 hover:text-red-900 transition-colors duration-300">Health</a>
+            <div class="flex items-center flex-wrap gap-3">
+                <h3 class="text-xl font-semibold">Tags:</h3>
+                <a href="#" class="text-blue-800 py-1 px-3 rounded-full text-sm hover:text-blue-600 transition-colors duration-300">Tag 1</a>
+                <a href="#" class="text-blue-800 py-1 px-3 rounded-full text-sm hover:text-blue-600 transition-colors duration-300">Tag 2</a>
+                <a href="#" class="text-blue-800 py-1 px-3 rounded-full text-sm hover:text-blue-600 transition-colors duration-300">Tag 3</a>
+                <a href="#" class="text-blue-800 py-1 px-3 rounded-full text-sm hover:text-blue-600 transition-colors duration-300">Tag 4</a>
             </div>
         </div>
     </article>
