--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -80,7 +80,7 @@
       const email = document.querySelector("#email").value;
       const password = document.querySelector("#password").value;
       const response = await fetch(`/login`, {
-        method: POST, 
+        method: "POST", 
         headers: {
           "Content-Type": "application/json"
         },
