--- a/src/views/layouts/admin-navbar.ejs
+++ b/src/views/layouts/admin-navbar.ejs
@@ -39,17 +39,17 @@
             <div class="row flex-nowrap">
                 <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-dark">
                     <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 min-vh-100">
-                        <a href="/" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
+                        <a href="/admin/dashboard" class="d-flex align-items-center pb-3 mb-md-0 me-md-auto text-white text-decoration-none">
                             <span class="fs-2 d-none d-sm-inline">Admin Dashboard</span>
                         </a>
                         <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
                             <li class="nav-item">
-                                <a href="/" class="nav-link align-middle px-0 text-white active">
+                                <a href="/admin/dashboard" class="nav-link align-middle px-0 text-white active">
                                     <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span>
                                 </a>
                             </li>
                             <li>
-                                <a href="/article" class="nav-link px-0 align-middle active">
+                                <a href="/admin/article" class="nav-link px-0 align-middle active">
                                     <i class="fs-4 bi-pencil-square text-white"></i> <span class="ms-1 d-none d-sm-inline text-white">Article Management</span>
                                 </a>
                             </li>
@@ -58,10 +58,10 @@
                                     <i class="fs-4 bi-bookmark-fill text-white"></i> <span class="ms-1 d-none d-sm-inline text-white">Tag/Category Management</span></a>
                                 <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
                                     <li class="w-100">
-                                        <a href="/tag" class="nav-link px-0 active"> <span class="d-none d-sm-inline text-white">Tag</span></a>
+                                        <a href="/admin/tag" class="nav-link px-0 active"> <span class="d-none d-sm-inline text-white">Tag</span></a>
                                     </li>
                                     <li>
-                                        <a href="/category" class="nav-link px-0 active"> <span class="d-none d-sm-inline text-white">Category</span></a>
+                                        <a href="/admin/category" class="nav-link px-0 active"> <span class="d-none d-sm-inline text-white">Category</span></a>
                                     </li>
                                 </ul>
                             </li>
@@ -70,18 +70,18 @@
                                     <i class="fs-4 bi-grid text-white"></i> <span class="ms-1 d-none d-sm-inline text-white">Account Managemant</span> </a>
                                     <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
                                     <li class="w-100">
-                                        <a href="/writer" class="nav-link px-0 active"> <span class="d-none d-sm-inline text-white">Writer</span></a>
+                                        <a href="/admin/writer" class="nav-link px-0 active"> <span class="d-none d-sm-inline text-white">Writer</span></a>
                                     </li>
                                     <li>
-                                        <a href="/editor" class="nav-link px-0 active"> <span class="d-none d-sm-inline text-white">Editor</span></a>
+                                        <a href="/admin/editor" class="nav-link px-0 active"> <span class="d-none d-sm-inline text-white">Editor</span></a>
                                     </li>
                                     <li>
-                                        <a href="/subscriber" class="nav-link px-0 active"> <span class="d-none d-sm-inline text-white">Subsciber</span></a>
+                                        <a href="/admin/subscriber" class="nav-link px-0 active"> <span class="d-none d-sm-inline text-white">Subsciber</span></a>
                                     </li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="/addaccount" class="nav-link px-0 align-middle active">
+                                <a href="/admin/addaccount" class="nav-link px-0 align-middle active">
                                     <i class="fs-4 bi-person-plus-fill text-white"></i> <span class="ms-1 d-none d-sm-inline text-white">Add Account</span>
                                 </a>
                             </li>
