--- a/src/views/layouts/main-layout.ejs
+++ b/src/views/layouts/main-layout.ejs
@@ -20,6 +20,9 @@
 
   <body class="font-nunito">
     <header class="flex flex-col">
+      <% function isCurrentPath(path) { const currentPath=req.path.split('/')[1]
+      || 'home' ; return currentPath===path; } %>
+
       <!-- Title Section -->
       <div
         class="container mx-auto flex h-36 items-center justify-between px-4 font-playfair"
@@ -84,6 +87,7 @@
 
     <!-- Navbar Section -->
     <!-- make this separated from header to apply sticky effect -->
+    <%if (categories) { %>
     <nav
       class="sticky top-0 z-10 flex h-14 w-full items-center justify-center bg-white"
     >
@@ -114,7 +118,7 @@
           <!-- Home Icon -->
           <li class="relative flex h-14 items-center">
             <a class="flex items-center hover:text-blue-500" href="/">
-              <svg>
+              <svg class="size-6">
                 <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z" />
                 <path d="M9 22V12h6v10" />
                 <rect x="10" y="15" width="4" height="7" fill="white" />
@@ -125,26 +129,25 @@
           <!-- Dynamic Categories -->
           <% categories.forEach(category=> { %>
           <li
-            class="dropdown <%= activeCategory === category.name ? 'active' : '' %> relative flex h-14 items-center"
+            class="dropdown <%= isCurrentPath(category.name) ? 'active' : '' %> relative flex h-14 items-center"
           >
             <a
-              class="<%= activeCategory === category.name ? 'text-blue-500' : '' %> font-bold hover:text-blue-500"
+              class="<%= isCurrentPath(category.name) ? 'text-blue-500' : '' %> font-bold hover:text-blue-500"
               href="/<%= category.name %>"
             >
-              <%= category.displayName %>
+              <%= category.name %>
             </a>
-            <% if (category.subcategories && category.subcategories.length> 0) {
-            %>
+            <% if (category.children && category.children.length> 0) { %>
             <ul
-              class="dropdown-menu absolute left-0 mt-2 w-48 bg-white shadow-lg"
+              class="dropdown-menu absolute left-0 mt-1 w-48 bg-white shadow-lg"
             >
-              <% category.subcategories.forEach(sub=> { %>
+              <% category.children.forEach(sub=> { %>
               <li>
                 <a
                   class="block px-4 py-2 font-bold hover:bg-gray-200 hover:text-blue-500"
                   href="<%= sub.link %>"
                 >
-                  <%= sub.displayName %>
+                  <%= sub.name %>
                 </a>
               </li>
               <% }) %>
@@ -155,8 +158,7 @@
         </ul>
       </div>
     </nav>
-
-    <%- include(content) %>
+    <% } %> <%- include(content) %>
 
     <footer
       class="flex flex-col items-center justify-between gap-8 border-t-2 border-t-zinc-300 p-6 text-center shadow-[0_-4px_6px_-1px_rgba(0,0,0,0.1)] xl:px-20"
