--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -4,7 +4,7 @@
   <section class="mb-8">
     <h2 class="mb-4 text-3xl font-bold">Featured Posts of the Past Week</h2>
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
-      <% homeData.featuredArticles.forEach(article=> { %>
+      <% homeData.featured.forEach(article=> { %>
       <a href="/<%= article.slug %>" class="block">
         <article
           class="bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
@@ -12,14 +12,14 @@
           <!-- Article Image -->
           <div class="relative mb-4">
             <img
-              src="<%= article.imageUrl %>"
+              src="<%= article.thumbnail.small %>"
               alt="Article Image"
               class="h-auto w-full"
             />
 
             <!-- Article Type Tag -->
             <div class="absolute right-2 top-2">
-              <% if (article.isPremium) { %>
+              <% if (article.premium) { %>
               <span
                 class="rounded-full bg-gradient-to-r from-purple-600 to-blue-600 px-3 py-1 text-sm font-semibold text-white shadow-md"
               >
@@ -37,10 +37,13 @@
 
           <!-- Article Content -->
           <div>
-            <h3 class="mb-2 text-xl font-semibold"><%= article.title %></h3>
-            <p class="mb-2 text-gray-600">Category: <%= article.category %></p>
+            <h3 class="mb-2 text-xl font-semibold"><%= article.name %></h3>
             <p class="mb-2 text-gray-600">
-              Posted Date: <%= article.datePublished %>
+              Category: <%= article.category.name %>
+            </p>
+            <p class="mb-2 text-gray-600">
+              Posted Date: <%= article.publishedDate.toLocaleDateString("en-US")
+              %>
             </p>
           </div>
         </article>
@@ -53,7 +56,7 @@
   <section class="mb-8">
     <h2 class="mb-4 text-3xl font-bold">Most Viewed Articles</h2>
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
-      <% homeData.mostViewedArticles.forEach(article=> { %>
+      <% homeData.mostViewed.forEach(article=> { %>
       <a href="/<%= article.slug %>" class="block">
         <article
           class="bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
@@ -61,14 +64,14 @@
           <!-- Article Image -->
           <div class="relative mb-4">
             <img
-              src="<%= article.imageUrl %>"
+              src="<%= article.thumbnail.small %>"
               alt="Article Image"
               class="h-auto w-full"
             />
 
             <!-- Article Type Tag -->
             <div class="absolute right-2 top-2">
-              <% if (article.isPremium) { %>
+              <% if (article.premium) { %>
               <span
                 class="rounded-full bg-gradient-to-r from-purple-600 to-blue-600 px-3 py-1 text-sm font-semibold text-white shadow-md"
               >
@@ -86,10 +89,12 @@
 
           <!-- Article Content -->
           <div>
-            <h3 class="mb-2 text-xl font-semibold"><%= article.title %></h3>
-            <p class="mb-2 text-gray-600">Category: <%= article.category %></p>
+            <h3 class="mb-2 text-xl font-semibold"><%= article.name %></h3>
             <p class="mb-2 text-gray-600">
-              Posted Date: <%= article.datePublished %>
+              Category: <%= article.category.name %>
+            </p>
+            <p class="mb-2 text-gray-600">
+              Posted Date: <%= article.publishedDate.toLocaleString("vi-VN") %>
             </p>
           </div>
         </article>
@@ -102,7 +107,7 @@
   <section class="mb-8">
     <h2 class="mb-4 text-3xl font-bold">Latest Posts</h2>
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 lg:grid-cols-4">
-      <% homeData.latestArticles.forEach(article=> { %>
+      <% homeData.latest.forEach(article=> { %>
       <a href="/<%= article.slug %>" class="block">
         <article
           class="bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
@@ -110,14 +115,14 @@
           <!-- Article Image -->
           <div class="relative mb-4">
             <img
-              src="<%= article.imageUrl %>"
+              src="<%= article.thumbnail.small %>"
               alt="Article Image"
               class="h-auto w-full"
             />
 
             <!-- Article Type Tag -->
             <div class="absolute right-2 top-2">
-              <% if (article.isPremium) { %>
+              <% if (article.premium) { %>
               <span
                 class="rounded-full bg-gradient-to-r from-purple-600 to-blue-600 px-3 py-1 text-sm font-semibold text-white shadow-md"
               >
@@ -135,10 +140,12 @@
 
           <!-- Article Content -->
           <div>
-            <h3 class="mb-2 text-xl font-semibold"><%= article.title %></h3>
-            <p class="mb-2 text-gray-600">Category: <%= article.category %></p>
+            <h3 class="mb-2 text-xl font-semibold"><%= article.name %></h3>
             <p class="mb-2 text-gray-600">
-              Posted Date: <%= article.datePublished %>
+              Category: <%= article.category.name %>
+            </p>
+            <p class="mb-2 text-gray-600">
+              Posted Date: <%= article.publishedDate.toLocaleString("vi-VN") %>
             </p>
           </div>
         </article>
@@ -153,14 +160,14 @@
     <div
       class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-2 xl:grid-cols-3"
     >
-      <% homeData.topCategories.forEach(category=> { %>
+      <% homeData.latestEach.forEach(category=> { %>
       <a href="/<%= category.slug %>" class="block">
         <article
           class="bg-white p-4 shadow-md transition-transform duration-300 hover:scale-105 hover:shadow-lg"
         >
           <div class="relative">
             <div class="absolute right-2 top-2">
-              <% if (category.isPremium) { %>
+              <% if (category.post.premium) { %>
               <span
                 class="rounded-full bg-gradient-to-r from-purple-600 to-blue-600 px-3 py-1 text-sm font-semibold text-white shadow-md"
               >
@@ -176,7 +183,7 @@
             </div>
           </div>
 
-          <h3 class="mb-4 text-xl font-semibold"><%= category.category %></h3>
+          <h3 class="mb-4 text-xl font-semibold"><%= category.name %></h3>
           <div class="flex items-center gap-4">
             <img
               alt="Category thumbnail"
@@ -184,8 +191,11 @@
               src="https://placehold.co/150x150/EEE/31343C"
             />
             <div>
-              <h4 class="text-lg font-medium"><%= category.title %></h4>
-              <p class="text-gray-600">Posted Date: 2023-12-01</p>
+              <h4 class="text-lg font-medium"><%= category.post.name %></h4>
+              <p class="text-gray-600">
+                Posted Date: <%=
+                category.post.publishedDate.toLocaleString("vi-VN") %>
+              </p>
             </div>
           </div>
         </article>
