--- a/src/views/pages/home.ejs
+++ b/src/views/pages/home.ejs
@@ -188,7 +188,7 @@
             <img
               alt="Category thumbnail"
               class="h-24 w-24 rounded-lg object-cover"
-              src="https://placehold.co/150x150/EEE/31343C"
+              src="<%= category.post.thumbnail.small %>"
             />
             <div>
               <h4 class="text-lg font-medium"><%= category.post.name %></h4>
