fix user session?

--- a/src/views/layouts/main-layout.ejs
+++ b/src/views/layouts/main-layout.ejs
@@ -81,7 +81,7 @@
             <!-- Dropdown Menu -->
             <div
               id="userDropdownMenu"
-              class="absolute right-0 mt-2 hidden w-48 rounded-lg bg-white shadow-lg"
+              class="absolute right-0 z-50 mt-2 hidden w-48 rounded-lg bg-white shadow-lg"
             >
               <a
                 href="/profile"
